fix hero section box design and added alignment plus font style to it's text

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -26,6 +26,10 @@
 
 .hero h1 {
   font-size: 1.6rem;
+  font-weight: bold;
+  font-family: fangsong;
+  margin-left: -18px;
+
 }
 
 .hero-wrapper {
@@ -34,6 +38,7 @@
   left: 1rem;
   top: 0;
   margin: auto;
+  margin-top: 16rem !important;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,12 +48,20 @@
   /* background-color: red; */
   color: white;
   border-radius: 1rem;
-  height: 10rem;
+  height: 19rem !important;
   padding: 0.5rem 1rem;
+
 }
 
 .hero-wrapper p {
   font-size: 1.2rem;
+  font-family: fangsong;
+  margin-left: 15px;
+}
+
+.hero-wrapper .btn {
+  font-family: fangsong;
+
 }
 
 @media screen and (min-width: 768px) {
@@ -74,5 +87,6 @@
   .hero-wrapper p {
     font-size: 1rem;
     width: 90%;
+    font-family: fangsong;
   }
 }
